kubernetes/server-ftp.yml
apiVersion: v1
kind: Pod
metadata:
  labels:
    run: ftp-srv
  name: ftp-srv
spec:
  containers:
  - image: infrabuilder/netbench:server-ftp
    name: ftpd-srv
    volumeMounts:
    - name: data
      mountPath: /var/ftp
  volumes:
  - name: data
    hostPath:
      path: /home/ubuntu
  nodeSelector: 
    kubernetes.io/hostname: s02
  restartPolicy: Never
