kubernetes/server-http.yml
apiVersion: v1
kind: Pod
metadata:
  labels:
    run: http-srv
  name: http-srv
spec:
  containers:
  - image: infrabuilder/netbench:server-http
    name: httpd-srv
    volumeMounts:
    - name: data
      mountPath: /usr/share/nginx/html
  volumes:
  - name: data
    hostPath:
      path: /home/ubuntu
  nodeSelector: 
    kubernetes.io/hostname: s02
  restartPolicy: Never
