kubernetes/server-ssh.yml
apiVersion: v1
kind: Pod
metadata:
  labels:
    run: ssh-srv
  name: ssh-srv
spec:
  containers:
  - image: infrabuilder/netbench:server-ssh
    name: sshd-srv
    volumeMounts:
    - name: data
      mountPath: /root
  volumes:
  - name: data
    hostPath:
      path: /home/ubuntu
  nodeSelector: 
    kubernetes.io/hostname: s02
  restartPolicy: Never
