kubernetes/test-netpol.yml
apiVersion: v1
kind: Namespace
metadata:
  creationTimestamp: null
  name: netpol
spec: {}
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: test-netpol
  namespace: netpol
spec:
  podSelector:
    matchLabels:
      run: srv
  policyTypes:
  - Ingress
  - Egress
  ingress:
  - from:
    - podSelector:
        matchLabels:
          run: granted
  egress:
  - to:
    - podSelector:
        matchLabels:
          run: authorized
#  - to:
#    - ipBlock:
#        cidr: 10.32.0.2/32
